// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleTag renders as expected with a lupe icon 1`] = `
<span
  className="lab-tag lab-tag--pale lab-tag--has-left-icon"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  <span
    className="lab-icon lab-icon--lupe lab-icon--black75 lab-icon--petit lab-icon--left-icon"
  />
  Test render SimpleTag with lupe icon
</span>
`;

exports[`SimpleTag renders as expected with a purple color 1`] = `
<span
  className="lab-tag lab-tag--purple-pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test render purple SimpleTag
</span>
`;

exports[`SimpleTag renders as expected with a thumb 1`] = `
<span
  className="lab-tag lab-tag--pale lab-tag--has-thumb"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  <img
    alt=""
    className="lab-tag__thumb"
    src="fake-thumb"
  />
  Test render SimpleTag with thumb
</span>
`;

exports[`SimpleTag renders as expected with a vivid skin 1`] = `
<span
  className="lab-tag lab-tag--vivid"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test render vivid SimpleTag
</span>
`;

exports[`SimpleTag renders as expected with disabled as true 1`] = `
<span
  className="lab-tag lab-tag--disabled lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test render disabled SimpleTag
</span>
`;

exports[`SimpleTag renders as expected with outline as true 1`] = `
<span
  className="lab-tag lab-tag--outline lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test render outline SimpleTag
</span>
`;

exports[`SimpleTag renders with base props 1`] = `
<span
  className="lab-tag lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test render SimpleTag
</span>
`;
